--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,8 +5,12 @@ cmake_minimum_required (VERSION 3.8)
 
 project ("LightHouse")
 
+set(CMAKE_CXX_STANDARD 20)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
+set(CMAKE_CXX_EXTENSIONS OFF)
+
 # Add source to this project's executable.
-add_executable (LightHouse "src/LightHouse.cpp" "include/lighthouse/LightHouse.hpp")
+add_executable (LightHouse "src/lighthouse/LightHouse.cpp" "include/lighthouse/LightHouse.hpp")
 
 if (CMAKE_VERSION VERSION_GREATER 3.12)
   set_property(TARGET LightHouse PROPERTY CXX_STANDARD 20)
