working on vulkan rendering system

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -72,6 +72,7 @@ add_compile_definitions(
 
 	# vulkan definitions
 	#VULKAN_HPP_NO_EXCEPTIONS
+	VULKAN_HPP_NO_CONSTRUCTORS
 	VULKAN_HPP_NO_NODISCARD_WARNINGS
 	VULKAN_HPP_NO_SPACESHIP_OPERATOR
 )
