work on renderer

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,45 +2,44 @@
 
 project("LightHouse")
 
-#set(CMAKE_CXX_STANDARD 23)
+set(CMAKE_CXX_STANDARD 23)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS ON)
 
 # Path
-cmake_path(SET source ${CMAKE_CURRENT_SOURCE_DIR}/source/lighthouse)
+cmake_path(SET source ${CMAKE_CURRENT_SOURCE_DIR}/source)
 cmake_path(SET include ${CMAKE_CURRENT_SOURCE_DIR}/include)
 cmake_path(SET module ${CMAKE_CURRENT_SOURCE_DIR}/module)
-cmake_path(SET library ${CMAKE_CURRENT_SOURCE_DIR}/lib)
+cmake_path(SET library ${CMAKE_CURRENT_SOURCE_DIR}/library)
 
 # Add source to this project's executable.
 add_executable(
 	${PROJECT_NAME} 
 	#${module}/lighthouse/vulkan/vulkan.ixx ${source}/../vulkan/vulkan.cpp
 	#${module}/std/std.ixx ${source}/../std/std.cpp
-	${source}/lightHouse.cpp
-	${source}/window.cpp
-	${source}/output.cpp
-	${source}/input.cpp
-	${source}/filesystem.cpp
-	${source}/engine.cpp
-	${source}/renderer.cpp
-	${source}/version.cpp
-	${source}/node.cpp
-	${source}/../vulkan/shaders.cpp
-	${source}/../vulkan/utils.cpp
-	${source}/../vulkan/math.cpp
-	${source}/system.cpp
-	${source}/memory.cpp
-	${source}/../vulkan/vma_implementation.cpp
-	${source}/vulkan/vulkan.cpp
-	${source}/vulkan/extension.cpp
-	${source}/vulkan/instance.cpp
-	${source}/vulkan/debug_messanger.cpp
-
+	${source}/lighthouse/lightHouse.cpp
+	${source}/lighthouse/window.cpp
+	${source}/lighthouse/output.cpp
+	${source}/lighthouse/input.cpp
+	${source}/lighthouse/filesystem.cpp
+	${source}/lighthouse/engine.cpp
+	${source}/lighthouse/renderer.cpp
+	${source}/lighthouse/version.cpp
+	${source}/lighthouse/node.cpp
+	${source}/vulkan/shaders.cpp
+	${source}/vulkan/utils.cpp
+	${source}/vulkan/math.cpp
+	${source}/lighthouse/system.cpp
+	${source}/lighthouse/memory.cpp
+	${source}/vulkan/vma_implementation.cpp
+	${source}/lighthouse/vulkan/vulkan.cpp
+	${source}/lighthouse/vulkan/extension.cpp
+	${source}/lighthouse/vulkan/instance.cpp
+	${source}/lighthouse/vulkan/debug_messanger.cpp
 )
 
-#STRING (REGEX REPLACE "/RTC(su|[1su])" "" CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG}")
-#STRING (REGEX REPLACE "/RTC(su|[1su])" "" CMAKE_C_FLAGS_DEBUG "${CMAKE_C_FLAGS_DEBUG}")
+STRING (REGEX REPLACE "/RTC(su|[1su])" "" CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG}")
+STRING (REGEX REPLACE "/RTC(su|[1su])" "" CMAKE_C_FLAGS_DEBUG "${CMAKE_C_FLAGS_DEBUG}")
 
 # Compiler options
 if(${CMAKE_CXX_COMPILER_ID} EQUAL MSVC)
@@ -50,6 +49,8 @@ if(${CMAKE_CXX_COMPILER_ID} EQUAL MSVC)
 	  /std:c++latest /EHsc /GL /Ox /Oi /W3 /MP /Zf /MD /openmp:experimental /Qpar /Qpar-report:1 /fp:fast /arch:AVX2 /nologo /experimental:module
 	  # MSVC disable common annoying warnings
 	  /wd4005 /wd4068 /wd4244 /wd4267 /wd4800
+	  # Windows.h configuration
+	  /DNOMINMAX /DWIN32_LEAN_AND_MEAN /D_CRT_SECURE_NO_WARNINGS
 	)
 	
 	target_link_options(
@@ -97,9 +98,7 @@ target_compile_definitions(
 	VULKAN_HPP_FLAGS_MASK_TYPE_AS_PUBLIC
 	VULKAN_HPP_NO_NODISCARD_WARNINGS
 	VULKAN_HPP_NO_SPACESHIP_OPERATOR
-
-	#WIN32 definitions
-	NOMINMAX 
+	VULKAN_HPP_NO_SMART_HANDLE
 )
 
 # Include
@@ -127,18 +126,9 @@ target_precompile_headers(
 	${PROJECT_NAME} PRIVATE
 	${include}/vkfw/vkfw.hpp
 
-	${include}/vulkan/vulkan.hpp
-	${include}/vulkan/vulkan_enums.hpp
 	${include}/vulkan/vulkan_raii.hpp
-	${include}/vulkan/vulkan_to_string.hpp
-	${include}/vulkan/vulkan_structs.hpp
-	${include}/vulkan/vulkan_funcs.hpp
-	${include}/vulkan/vulkan_handles.hpp
-	${include}/vulkan/vulkan_profiles.hpp
-	${include}/vulkan/vulkan_enums.hpp
-	${include}/vulkan/vulkan_core.h
 
-	${include}/glm/fwd.hpp
+	${include}/vulkan/glm/fwd.hpp
 )
 
 # Libraries
