work on renderer

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -45,7 +45,7 @@ add_executable(
 	${source}/lighthouse/vulkan/queue.cpp
 	${source}/lighthouse/vulkan/image.cpp
 	${source}/lighthouse/vulkan/swapchain.cpp
-	${source}/lighthouse/vulkan/shader_module.cpp
+	#${source}/lighthouse/vulkan/shader_module.cpp
 )
 
 #STRING (REGEX REPLACE "/RTC(su|[1su])" "" CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG}")
