work on renderer

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -118,7 +118,8 @@ target_compile_definitions(
 	VULKAN_HPP_FLAGS_MASK_TYPE_AS_PUBLIC
 	VULKAN_HPP_NO_NODISCARD_WARNINGS
 	VULKAN_HPP_NO_SPACESHIP_OPERATOR
-	VULKAN_HPP_NO_SMART_HANDLE
+	#VULKAN_HPP_NO_SMART_HANDLE
+	#VULKAN_HPP_NO_SETTERS
 
 	# glm definitions
 	GLM_ENABLE_EXPERIMENTAL
